<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <TextView
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/title_txt"
            android:layout_width="345dp"
            android:layout_height="62dp" android:id="@+id/textView3"
            android:textSize="34sp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="4dp"/>
    <TextView
            android:gravity="center"
            android:text="@string/tip_txt"
            android:layout_width="344dp"
            android:layout_height="76dp" android:id="@+id/textView"
            android:textSize="20sp" android:layout_marginBottom="4dp"
            android:layout_marginStart="32dp"/>

    <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/encrypt_txt"
            android:layout_width="345dp"
            android:layout_height="90dp"
            android:enabled="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="8"
            android:maxLines="10"
            android:background="@android:drawable/edit_text"
            tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck"
            android:layout_marginStart="32dp" android:importantForAutofill="no">
    </EditText>

    <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="341dp"
            android:layout_height="wrap_content" android:id="@+id/interval_time_txt"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/get_but_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/get_button"
                android:layout_marginStart="75dp" style="?android:attr/buttonBarButtonStyle"/>
        <Button
                android:text="@string/permissions_but_txt"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Background_button"
                style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <Switch
            android:layout_marginStart="100dp"
            android:gravity="center"
            android:text="@string/notice_show_but_txt"
            android:layout_width="213dp"
            android:layout_height="38dp" android:id="@+id/notice_switch"
            tools:ignore="TouchTargetSizeCheck"/>
    <ImageView
            android:layout_width="245dp"
            android:layout_height="245dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"/>
    <TextView
            android:gravity="center"
            android:text="@string/expire_txt"
            android:layout_marginTop="10dp"
            android:layout_width="341dp"
            android:layout_height="38dp" android:id="@+id/last_get_txt"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
    />
</LinearLayout>
